--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://sy7979.github.io/react-for-beginners"
+  "hompage": "https://DawnShineY.github.io/react-for-beginners"
 }
